# OpenObscure

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  EXPORT_CONTROL_NOTICE.md  INTEGRATION_GUIDE.md  LICENSE  Makefile  QUICK_START.md  README.md  SECURITY.md  SETUP_GUIDE.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  napi-publish.yml  release.yml
bindings/swift/: openobscure_core.swift  openobscure_coreFFI.h  openobscure_coreFFI.modulemap  openobscure_proxy.swift  openobscure_proxyFFI.h
demo/: EMBEDDED_DEMO.md  GATEWAY_DEMO.md
deploy/aws/: iam-policy.json  task-definition.json
deploy/gcp/: secret-store.yaml
deploy/k8s/: deployment.yaml  secret.yaml
deploy/vault/: fpe-key.tpl  vault-agent-config.hcl
docs/: README.md  _index.md
docs/architecture/: _index.md  design-decisions.md  image-pipeline.md  l0-core.md  l0-proxy.md  l1-plugin.md  napi-scanner.md  response-integrity.md  semantic-pii-detection.md  system-overview.md  threat-model.md
docs/configure/: _index.md  config-reference.md  detection-engine-configuration.md  fpe-configuration.md
docs/contribute/: _index.md  contributing.md  feature-gating-protocol.md  maintainer-guide.md  release-process.md
docs/get-started/: _index.md  alternatives.md  before-you-start.md  deployment-models.md  deployment-tiers.md  faq.md  (+7 more)
integration/: INTEGRATION_GUIDE.md
openobscure-core/: ARCHITECTURE.md  Cargo.toml  LICENSE_AUDIT.md
openobscure-core/benches/: fpe_bench.rs  image_bench.rs  scanner_bench.rs
openobscure-core/examples/: demo_image_pipeline.rs  face_diag.rs
openobscure-core/install/: README.md
openobscure-core/install/launchd/: com.openobscure.proxy.plist
openobscure-core/install/systemd/: openobscure.service
openobscure-core/models/blazeface/: blazeface.onnx
openobscure-core/models/kws/: bpe.model  keywords.txt  pii_keywords_raw.txt
openobscure-core/models/ner/: config.json  model_int8.onnx
openobscure-core/models/ner-lite/: config.json  model_int8.onnx
openobscure-core/models/nsfw_classifier/: nsfw_5class_int8.onnx
openobscure-core/models/nudenet/: LICENSE
openobscure-core/models/ri/: model_int8.onnx
openobscure-core/src/: audio_decode.rs  body.rs  config.rs  crash_buffer.rs  crf_scanner.rs  detection_meta.rs  detection_validators.rs  device_profile.rs  error.rs  face_detector.rs  fpe_engine.rs  hash_token.rs  health.rs  hybrid_scanner.rs  image_detect.rs  image_fetch.rs  image_pipeline.rs  key_manager.rs  keyword_dict.rs  kws_engine.rs  lang_detect.rs  lib.rs  lib_mobile.rs  main.rs  mapping.rs  name_gazetteer.rs  ner_scanner.rs  nsfw_classifier.rs  nsfw_detector.rs  ocr_engine.rs  oo_log.rs  ort_ep.rs  passthrough.rs  pii_scrub_layer.rs  pii_types.rs  proxy.rs  response_format.rs  response_integrity.rs  ri_model.rs  scanner.rs  (+7 more)
openobscure-core/src/multilingual/: ar.rs  de.rs  es.rs  fr.rs  mod.rs  pt.rs
openobscure-core/tests/: accuracy_test.rs  embedded_suite.rs  pipeline_validation_test.rs
openobscure-crypto/: ARCHITECTURE.md  Cargo.toml  LICENSE_AUDIT.md
openobscure-crypto/src/: cipher.rs  kdf.rs  lib.rs  store.rs
openobscure-napi/: .gitignore  ARCHITECTURE.md  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  postinstall.js  test.mjs
openobscure-napi/npm/darwin-arm64/: package.json
openobscure-napi/npm/darwin-x64/: package.json
openobscure-napi/npm/linux-arm64-gnu/: package.json
openobscure-napi/npm/linux-arm64-musl/: package.json
openobscure-napi/npm/linux-x64-gnu/: package.json
openobscure-napi/npm/linux-x64-musl/: package.json
openobscure-napi/src/: lib.rs
openobscure-ner/: ARCHITECTURE.md  benchmark_results.json  label_map.json  requirements.txt
openobscure-plugin/: ARCHITECTURE.md  LICENSE_AUDIT.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
openobscure-proxy/: ARCHITECTURE.md  Cargo.toml  LICENSE_AUDIT.md  THIRD_PARTY_LICENSES
openobscure-proxy/.cargo/: config.toml
openobscure-proxy/benches/: fpe_bench.rs  image_bench.rs  pii_corpus.json  scanner_bench.rs
openobscure-proxy/config/: openobscure.toml
openobscure-proxy/examples/: demo_image_pipeline.rs  face_diag.rs
openobscure-proxy/install/: README.md
openobscure-proxy/install/launchd/: com.openobscure.proxy.plist
openobscure-proxy/install/systemd/: openobscure-proxy.service
openobscure-proxy/models/ner/: model_int8.onnx
openobscure-proxy/models/ner-lite/: label_map.json  tokenizer_config.json
openobscure-proxy/models/nsfw_classifier/: nsfw_classifier.onnx
openobscure-proxy/src/: body.rs  breach_detect.rs  cg_log.rs  compliance.rs  config.rs  crash_buffer.rs  crf_scanner.rs  cross_border.rs  detection_meta.rs  detection_validators.rs  device_profile.rs  error.rs  face_detector.rs  fpe_engine.rs  governance.rs  hash_token.rs  health.rs  hybrid_scanner.rs  image_blur.rs  image_detect.rs  image_pipeline.rs  image_redact.rs  inspect.rs  integration_tests.rs  key_manager.rs  keyword_dict.rs  kws_engine.rs  lib.rs  lib_mobile.rs  main.rs  mapping.rs  ner_endpoint.rs  ner_scanner.rs  nsfw_classifier.rs  nsfw_detector.rs  ocr_engine.rs  oo_log.rs  ort_ep.rs  persuasion_dict.rs  pii_scrub_layer.rs  (+12 more)
openobscure-proxy/src/multilingual/: de.rs  es.rs  fr.rs  ja.rs  ko.rs  mod.rs  zh.rs
openobscure-proxy/tests/: accuracy_test.rs  pipeline_validation_test.rs
project-plan/: MASTER_PLAN.md  PHASE6_PLAN.md  PHASE7_PLAN.md  PHASE8_PLAN.md
scripts/: benchmark_face_detectors.py  build_android.sh  build_ios.sh  check_openclaw_hooks.sh  download_models.sh  export_nsfw_classifier.py  generate_bindings.sh  generate_screenshot.py  r2_analyze_data.py  r2_clean_data.py  r2_download_semeval2020.py  r2_eval_semeval_baseline.py  r2_finetune.py  r2_generate_benign_paragraphs.py  r2_prepare_dataset.py  r2_prepare_semeval.py  validate_nudenet.py
setup/: README.md  embedded_setup.md  gateway_setup.md
test/: EMBEDDED_TEST.md  GATEWAY_TEST.md  PERFORMANCE.md  README.md  SETUP_GUIDE.md  TESTING_GUIDE.md  expected_results.json  snapshot.json
(+196 files in other folders)
