[package]
name = "openobscure-crypto"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "OpenObscure encryption layer — AES-256-GCM transcript encryption with Argon2id KDF"
license = "MIT OR Apache-2.0"

[dependencies]
# AES-256-GCM (RustCrypto)
aes-gcm = "0.10"
# Argon2id KDF
argon2 = "0.5"
# Utilities
rand = "0.8"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
