[package]
name = "openobscure-napi"
version = "0.1.0"
edition = "2021"
description = "OpenObscure native Node.js scanner addon — HybridScanner via napi-rs"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"
openobscure-proxy = { path = "../openobscure-proxy" }

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
